--- a/Mobflix/app/src/main/AndroidManifest.xml
+++ b/Mobflix/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobflix"
         tools:targetApi="31"
-        android:name=".di.MobflixApplication">
+        android:name=".MobflixApplication">
         <activity
             android:name=".ui.view.activity.MainActivity"
             android:exported="true"
